--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "express": "4.18.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-hook-form": "^7.43.2",
     "react-router-dom": "6.3.0",
     "styled-components": "5.3.5",
     "yup": "0.32.11"
